--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@vanilla-extract/dynamic": "^2.0.0",
     "@vanilla-extract/recipes": "^0.2.1",
     "@vanilla-extract/vite-plugin": "^3.0.1",
+    "axios": "^0.24.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0", 
+    "react-dom": "^17.0.0",
     "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
