--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.8",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-table": "^7.7.8",
     "@vanilla-extract/css": "^1.6.3",
@@ -16,7 +19,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
