--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "react-scripts build && echo '/* /index.html  200' | cat >build/_redirects ",
     "serve": "vite preview"
   },
   "dependencies": {
