--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/material": "^5.2.8",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
     "@types/react-table": "^7.7.8",
     "@vanilla-extract/css": "^1.6.3",
     "@vanilla-extract/dynamic": "^2.0.0",
     "@vanilla-extract/recipes": "^0.2.1",
     "@vanilla-extract/vite-plugin": "^3.0.1",
     "axios": "^0.24.0",
+    "lottie-react": "^2.2.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
