--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@vanilla-extract/dynamic": "^2.0.0",
     "@vanilla-extract/recipes": "^0.2.1",
     "@vanilla-extract/vite-plugin": "^3.0.1",
-    "axios": "^0.24.0",
-    "lottie-react": "^2.2.1",
+    "framer-motion": "^6.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-lottie": "^1.2.3",
